sevkiyat girişdepo=35 olarak değiştirildi

--- a/NOVA/Views/DisTicaret/IhracatSiparisleri.cshtml
+++ b/NOVA/Views/DisTicaret/IhracatSiparisleri.cshtml
@@ -124,6 +124,9 @@
         padding: 3px;
     }
 </style>
+<script>
+    $('#title').html('Nova | İhracat Siparişleri')
+</script>
 <link href="~/assets/vendor/css/Chart.css" rel="stylesheet" />
 <div class="container-fluid pt-3">
     <div id="nova-overlay" style="position: absolute; background: #00000080; left: 0; right: 0; bottom: 0; top: 0; z-index: 9999999;display:none;justify-content:center;align-items:center;">
