--- a/NOVA/Views/Finans/DetayliRiskLimiti.cshtml
+++ b/NOVA/Views/Finans/DetayliRiskLimiti.cshtml
@@ -1,7 +1,9 @@
 ﻿@{
-    Layout = "/Views/Shared/_Layout_Common.cshtml";
+    Layout = "/Views/Shared/_Layout_common.cshtml";
 }
-
+<script>
+    $('#title').html('Nova | Detayli Risk Limiti')
+</script>
 <div id="nova-overlay" style="position: absolute; background: #00000080; left: 0; right: 0; bottom: 0; top: 0; z-index: 9999999;display:none;justify-content:center;align-items:center;">
     <div class="heart"><img id="progress" src="~/images/novasaydam.png" width="400" /></div>
 </div>
