--- a/NOVA/Views/IK/PersonelBilgi.cshtml
+++ b/NOVA/Views/IK/PersonelBilgi.cshtml
@@ -9,14 +9,16 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>PersonelBilgi</title>
+    <title>Nova | Personel Bilgi</title>
     <style>
         body {
             padding: 0 0 0 4rem !important;
         }
     </style>
 </head>
+
 <body onclose="close()">
+   
     <div class="container-fluid flex-grow-1 container-p-y">
         <div class="row">
             <div class="col-md-12">
@@ -29,7 +31,8 @@
                             if (ViewBag.Update != null)
                             {
                                 updateyetki = "";
-                            } }
+                            } 
+                        }
 
                         <div class="row">
                             @using (Html.BeginForm("UploadFile", "IK", FormMethod.Post, new { enctype = "multipart/form-data" }))
@@ -5408,17 +5411,8 @@
         $(document).ready(function () {
             $('#pageName').html('<div class="dot"></div> Personel Bilgi')
         })
-        if ($(window).width() < 600) {
-            $("#divPartial2").show();
-            document.getElementById("ik").className = "menu-item open active";
-            document.getElementById("personelbilgi").className = "menu-item active";
-        }
-        else {
-            $("#divPartial").show();
-            document.getElementById("ik1").className = "nav__link active";
-            document.getElementById("personelbilgi1").className = "nav__dropdown-item active";
-        }
         
+
         function readURL(input) {
             document.getElementById("resimKaydet").removeAttribute("disabled")
             if (input.files && input.files[0]) {
