--- a/NOVA/Views/IK/PersonelPuantaj.cshtml
+++ b/NOVA/Views/IK/PersonelPuantaj.cshtml
@@ -194,6 +194,9 @@
 
 </head>
 <body>
+    <script>
+        $('#title').html('Nova | Puantaj Bilgisi')
+    </script>
     <div id="nova-overlay" style="position: absolute; background: #00000080; left: 0; right: 0; bottom: 0; top: 0; z-index: 9999999;display:none;justify-content:center;align-items:center;">
         <div class="heart"><img id="progress" src="~/images/novasaydam.png" width="400" /></div>
     </div>
@@ -511,9 +514,9 @@
                 }
             })
 
-           
+
                 $("#divPartial").show();
-            
+
             var myData = [];
             var url = "http://192.168.2.13:83/api/attendance/find/" + 10000;
             $.getJSON(url, function (data) {
@@ -1510,8 +1513,8 @@
                                             error: function (msg) { alert(JSON.stringify(msg)); }
                                         });
                                     }
-                                    
-                                
+
+
                                 }
 
 
