--- a/NOVA/Views/IsEmri/IsEmri.cshtml
+++ b/NOVA/Views/IsEmri/IsEmri.cshtml
@@ -16,13 +16,18 @@
     <script src="~/Scripts/select2.min.js"></script>
     <link href="~/wwwroot/libs/bootstrap-icons/font/bootstrap-icons.min.css" rel="stylesheet" />
     <script src="https://unpkg.com/tippy.js@6"></script>
+    <script>
+        $('#title').html('Nova | İş Emri')
+    </script>
     <style>
         input[readonly] {
             cursor: default;
         }
+
         textarea[readonly] {
             cursor: default;
         }
+
         ::-webkit-scrollbar {
             width: 3px;
             height: 5px;
@@ -33,9 +38,11 @@
             background: #7f7f7f;
             border-radius: 0.5rem;
         }
-        td{
-            font-size:12px !important;
+
+        td {
+            font-size: 12px !important;
         }
+
         body {
             padding: 0 0 0 3rem !important;
         }
@@ -119,7 +126,7 @@
         }
 
         .pvtTable thead tr {
-           background-image: linear-gradient(to right, #f1fcff 0%, #e0f8ff 51%, #f1fcff 100%);
+            background-image: linear-gradient(to right, #f1fcff 0%, #e0f8ff 51%, #f1fcff 100%);
         }
 
         table.pvtTable thead tr th, table.pvtTable tbody tr th {
@@ -150,6 +157,7 @@
             border-width: 0.1px;
             border-color: #a1a6c2;
         }
+
         table:not(#urunler):not(.pvtTable) th:last-child {
             border-top-right-radius: 10px !important;
             border-style: solid;
@@ -157,20 +165,24 @@
             border-width: 0.1px;
             border-color: #a1a6c2;
         }
-        .pvtTable{
-            border-collapse:unset !important;
-            border-spacing:0;
+
+        .pvtTable {
+            border-collapse: unset !important;
+            border-spacing: 0;
         }
+
         table.pvtTable thead tr:first-child th:nth-last-child(2) {
             border-top-right-radius: 10px !important;
             border-style: solid;
             border-width: 0.1px;
         }
+
         table.pvtTable thead tr:first-child th:first-child {
             border-top-left-radius: 10px !important;
             border-style: solid;
             border-width: 0.1px;
         }
+
         table.pvtTable tbody tr:nth-last-child(2) th:nth-last-child(2) {
             border-bottom-right-radius: 10px !important;
             border-style: solid;
@@ -182,23 +194,25 @@
             border-style: solid;
             border-width: 0.1px;
         }
-       
+
         table:not(#urunler):not(.pvtTable) th, td {
             border-style: solid;
             border-width: 0.1px;
             border-color: #a1a6c2;
         }
+
         table:not(#urunler):not(.pvtTable) {
             border-collapse: unset;
             border-spacing: 0;
         }
-        table:not(#urunler):not(.pvtTable) tr:last-child td:last-child {
-            border-bottom-right-radius: 10px !important;
-            border-bottom: hidden;
-            border-style: solid;
-            border-width: 0.1px;
-            border-color: #a1a6c2;
-        }
+
+            table:not(#urunler):not(.pvtTable) tr:last-child td:last-child {
+                border-bottom-right-radius: 10px !important;
+                border-bottom: hidden;
+                border-style: solid;
+                border-width: 0.1px;
+                border-color: #a1a6c2;
+            }
 
             table:not(#urunler):not(.pvtTable) tr:last-child td:first-child {
                 border-bottom-left-radius: 10px !important;
@@ -208,84 +222,100 @@
                 border-width: 0.1px;
                 border-color: #a1a6c2;
             }
-        table:not(#urunler):not(.pvtTable) tr:first-child {
-            background-image: linear-gradient(to right, #f1fcff 0%, #e0f8ff 51%, #f1fcff 100%);
-        }
-        table:not(#urunler):not(.pvtTable) tr th:not(:last-child) {
-            border-bottom: hidden;
-            border-right: hidden;
-        }
-        table:not(#urunler):not(.pvtTable) tr td:not(:last-child) {
-            border-right: hidden !important;
-        }
+
+            table:not(#urunler):not(.pvtTable) tr:first-child {
+                background-image: linear-gradient(to right, #f1fcff 0%, #e0f8ff 51%, #f1fcff 100%);
+            }
+
+            table:not(#urunler):not(.pvtTable) tr th:not(:last-child) {
+                border-bottom: hidden;
+                border-right: hidden;
+            }
+
+            table:not(#urunler):not(.pvtTable) tr td:not(:last-child) {
+                border-right: hidden !important;
+            }
+
         .tab input {
-  position: absolute;
-  opacity: 0;
-  z-index: -1;
-}
-.tab__content {
-  max-height: 0;
-  overflow: hidden;
-  transition: all 0.35s;
-}
-.tab input:checked ~ .tab__content {
-  max-height: 10rem;
-}
+            position: absolute;
+            opacity: 0;
+            z-index: -1;
+        }
 
-/* Visual styles */
-.accordion {
-  color: black;
- /* border: 2px solid;*/
-  border-radius: 0.5rem;
-  overflow: hidden;
-}
-.tab__label,
-.tab__close {
-  display: flex;
-  color: black;
-  background: var(--theme);
-  cursor: pointer;
-}
-.tab__label {
-  justify-content: space-between;
-  padding: 1rem;
-}
-.tab__label::after {
-  content: "\276F";
-  width: 1em;
-  height: 1em;
-  text-align: center;
-  transform: rotate(90deg);
-  transition: all 0.35s;
-}
-.tab input:checked + .tab__label::after {
-  transform: rotate(270deg);
-}
-.tab__content p {
-  margin: 0;
-  padding: 1rem;
-}
-.tab__close {
-  justify-content: flex-end;
-  padding: 0.5rem 1rem;
-  font-size: 0.75rem;
-}
-.accordion--radio {
-  --theme: var(--secondary);
-}
+        .tab__content {
+            max-height: 0;
+            overflow: hidden;
+            transition: all 0.35s;
+        }
 
-/* Arrow animation */
-.tab input:not(:checked) + .tab__label:hover::after {
-  animation: bounce .5s infinite;
-}
-@@keyframes bounce {
-  25% {
-    transform: rotate(90deg) translate(.25rem);
-  }
-  75% {
-    transform: rotate(90deg) translate(-.25rem);
-  }
-}
+        .tab input:checked ~ .tab__content {
+            max-height: 10rem;
+        }
+
+        /* Visual styles */
+        .accordion {
+            color: black;
+            /* border: 2px solid;*/
+            border-radius: 0.5rem;
+            overflow: hidden;
+        }
+
+        .tab__label,
+        .tab__close {
+            display: flex;
+            color: black;
+            background: var(--theme);
+            cursor: pointer;
+        }
+
+        .tab__label {
+            justify-content: space-between;
+            padding: 1rem;
+        }
+
+            .tab__label::after {
+                content: "\276F";
+                width: 1em;
+                height: 1em;
+                text-align: center;
+                transform: rotate(90deg);
+                transition: all 0.35s;
+            }
+
+        .tab input:checked + .tab__label::after {
+            transform: rotate(270deg);
+        }
+
+        .tab__content p {
+            margin: 0;
+            padding: 1rem;
+        }
+
+        .tab__close {
+            justify-content: flex-end;
+            padding: 0.5rem 1rem;
+            font-size: 0.75rem;
+        }
+
+        .accordion--radio {
+            --theme: var(--secondary);
+        }
+
+        /* Arrow animation */
+        .tab input:not(:checked) + .tab__label:hover::after {
+            animation: bounce .5s infinite;
+        }
+
+        @@keyframes bounce {
+            25% {
+                transform: rotate(90deg) translate(.25rem);
+            }
+
+            75% {
+                transform: rotate(90deg) translate(-.25rem);
+            }
+        }
+
         :root {
             --secondary: black;
             --background: black;
