--- a/NOVA/Views/Satis/Tekliflerim.cshtml
+++ b/NOVA/Views/Satis/Tekliflerim.cshtml
@@ -18,6 +18,9 @@
 <link href="~/assets/vendor/css/cssprogress.min.css" rel="stylesheet" />
 
 <link href="~/assets/boxicons/css/boxicons.min.css" rel="stylesheet" />
+<script>
+    $('#title').html('NOVA | Tekliflerim')
+</script>
 <style>
 
     .card-view {
