--- a/NOVA/Views/Sevkiyat/DepoTransfer.cshtml
+++ b/NOVA/Views/Sevkiyat/DepoTransfer.cshtml
@@ -32,6 +32,9 @@
 <script src="~/wwwroot/libs/axios/axios.js"></script>
 <link href="~/assets/boxicons/css/boxicons.min.css" rel="stylesheet" />
 <script>
+    $('#title').html('Nova | Depolar Arası Transfer')
+</script>
+<script>
     function ShowProgress() {
         document.body.style.overflow = 'hidden';
         document.activeElement.blur();
