--- a/NOVA/Views/Sevkiyat/SevkMalKabul.cshtml
+++ b/NOVA/Views/Sevkiyat/SevkMalKabul.cshtml
@@ -42,7 +42,9 @@
         color: white !important;
     }
 </style>
-
+<script>
+    $('#title').html('Nova | Sevk & Kabul İşlemleri')
+</script>
 <script>
     function ShowProgress() {
         document.body.style.overflow = 'hidden';
