--- a/NOVA/Views/Sevkiyat/SiparisRaporu.cshtml
+++ b/NOVA/Views/Sevkiyat/SiparisRaporu.cshtml
@@ -5,7 +5,7 @@
     //Layout = "~/Views/Shared/_Layout _yonetim_stok.cshtml";
 }
 <script src="~/Scripts/instascan.min.js"></script>
-
+<link href="~/assets/vendor/css/cssprogress.min.css" rel="stylesheet" />
 <style>
     body {
         padding: 0 0 0 4rem !important;
@@ -98,6 +98,9 @@
         overflow: hidden !important;
     }
 </style>
+<script>
+    $('#title').html('Nova | Müşteri Siparişi Raporu')
+</script>
 <style>
     .heart {
         animation: heartbeat 1s infinite alternate;
