--- a/NOVA/Views/Shared/_Layout_common.cshtml
+++ b/NOVA/Views/Shared/_Layout_common.cshtml
@@ -6,7 +6,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE9">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nova | Efece Galvaniz</title>
+    <title id="title">Nova | Efece Galvaniz</title>
 
     <link rel="icon" type="image/x-icon" href="/assets/img/icons/brands/Nova_White.png" />
     <script src="~/wwwroot/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -18,13 +18,12 @@
     <link href="~/Scripts/floating-labels.min.css" rel="stylesheet" />
 <link href="~/wwwroot/libs/select2/css/select2.css" rel="stylesheet" />
     <link href="~/Scripts/bootstrap-table.min.css" rel="stylesheet" />
-
+    <script src="~/wwwroot/libs/sweetalert2/sweetalert2.all.js"></script>
     <script src="~/Scripts/jquery-3.6.1.min.js"></script>
     <script src="~/Scripts/tippy/popper.min.js"></script>
     <script type="text/javascript" src="\assets\js\config.js"></script>
     <script src="/Scripts/jquery.validate.js" type='text/javascript'></script>
     <script src="/Scripts/jquery.validate.unobtrusive.js" type='text/javascript'></script>
-    <script src="~/assets/sweetalert/sweetalert.js"></script>
     <script src="~/Scripts/fuse.js"></script>
     <script src="~/wwwroot/libs/axios/axios.js"></script>
     <style>
