--- a/NOVA/Views/Shared/_Layout_menu.cshtml
+++ b/NOVA/Views/Shared/_Layout_menu.cshtml
@@ -417,6 +417,13 @@
                         </div>
                     </div>
                 </a>
+                <a class="menu-item" href="/Uretim/UretimPlani" style="display: @ViewBag.DisplayPlanlananUretimler;">
+                    <div class="module">
+                        <div class="information">
+                            <span class="fadable">Üretim Planı</span>
+                        </div>
+                    </div>
+                </a>
                 <a class="menu-item" href="/Uretim/UretimPlanlama" style="display: @ViewBag.DisplayUretimPlanlama;">
                     <div class="module">
                         <div class="information">
@@ -606,7 +613,7 @@
                 <i class='bx bxs-chevron-left'></i>
             </div>
             <div class="inner-menu">
-                <a class="menu-item" href="/YonetimPaneli/KullaniciAyar" style="display: @ViewBag.Display1;">
+                <a class="menu-item" href="/YonetimPaneli/UygulamaAyarlari" style="display: @ViewBag.Display1;">
                     <div class="module">
                         <div class="information">
                             <span class="fadable">Uygulama Ayarları</span>
