--- a/NOVA/Views/Uretim/HurdaVeIkinciKaliteTransfer.cshtml
+++ b/NOVA/Views/Uretim/HurdaVeIkinciKaliteTransfer.cshtml
@@ -3,7 +3,9 @@
     Layout = "~/Views/Shared/_Layout_common.cshtml";
 }
 <link href="~/bootstrap-icons-1.11.2/font/bootstrap-icons.min.css" rel="stylesheet" />
-
+<script>
+    $('#title').html('Nova | Hurda & 2. Kalite Transfer')
+</script>
 <style>
     body {
         padding-top: 2rem;
