--- a/NOVA/Views/Uretim/Izlenebilirlik.cshtml
+++ b/NOVA/Views/Uretim/Izlenebilirlik.cshtml
@@ -6,7 +6,9 @@
 <link href="~/wwwroot/css/BarcodeTrackTree.css" rel="stylesheet" />
 
 @Html.Partial("../Shared/BarcodeScanner")
-
+<script>
+    $('#title').html('Nova | İzlenebilirlik')
+</script>
 <div class="nova-card d-flex justify-content-start align-items-center p-3 mb-2">
 
     <div class="row d-flex justify-content-start align-items-center gap-2">
@@ -107,6 +109,25 @@
                             </td>
                             <td class="border-start-0">
                                 <span id="QUANTITY"></span>
+                            </td>
+                        </tr>
+
+                        <tr class="text-start">
+                            <td class="info border-end-0">
+                                <span>ESKİ BOBİN NO</span>
+                                <span>:</span>
+                            </td>
+                            <td class="border-start-0">
+                                <span id="ACIK5"></span>
+                            </td>
+                        </tr>
+                        <tr class="text-start">
+                            <td class="info border-end-0">
+                                <span>SIP NO</span>
+                                <span>:</span>
+                            </td>
+                            <td class="border-start-0">
+                                <span id="SIP_NO"></span>
                             </td>
                         </tr>
 
