--- a/NOVA/Views/Yonetim/Stok.cshtml
+++ b/NOVA/Views/Yonetim/Stok.cshtml
@@ -121,7 +121,9 @@
             cursor:pointer;
         }
 </style>
-
+<script>
+    $('#title').html('Nova | Stok Değeri')
+</script>
 <div class="container-fluid d-flex h-100">
     
     <div class="centercontent" id="content">
@@ -165,17 +167,17 @@
                 </ul>
             </div>
             <div class="btn-group menu2" role="group" aria-label="Basic radio toggle button group">
-                <input type="radio" class="btn-check" onclick="change(1)" name="btnradio" id="btnradio1" checked="" autocomplete="off">
+                <input type="radio" class="btn-check" value="Hepsi" onclick="change(1)" name="btnradio" id="btnradio1" checked="" autocomplete="off">
                 <label class="btn btn-outline-secondary" for="btnradio1">Hepsi</label>
-                <input type="radio" class="btn-check" onclick="change(2)" name="btnradio" id="btnradio2" autocomplete="off">
+                <input type="radio" class="btn-check"  value="EFECE1" onclick="change(2)" name="btnradio" id="btnradio2" autocomplete="off">
                 <label class="btn btn-outline-secondary" for="btnradio2">EFECE 1</label>
-                <input type="radio" class="btn-check" onclick="change(3)" name="btnradio" id="btnradio3" autocomplete="off">
+                <input type="radio" class="btn-check"  value="EFECE2" onclick="change(3)" name="btnradio" id="btnradio3" autocomplete="off">
                 <label class="btn btn-outline-secondary" for="btnradio3">EFECE 2</label>
-                <input type="radio" class="btn-check" onclick="change(4)" name="btnradio" id="btnradio4" autocomplete="off">
+                <input type="radio" class="btn-check"  value="EFECE3" onclick="change(4)" name="btnradio" id="btnradio4" autocomplete="off">
                 <label class="btn btn-outline-secondary" for="btnradio4">EFECE 3</label>
-                <input type="radio" class="btn-check" onclick="change(5)" name="btnradio" id="btnradio5" autocomplete="off">
-                <label class="btn btn-outline-secondary" for="btnradio5">EFECE 4</label>
-                <input type="radio" class="btn-check" onclick="change(6)" name="btnradio" id="btnradio6" autocomplete="off">
+                <input type="radio" class="btn-check"  value="EFECE4" onclick="change(5)" name="btnradio" id="btnradio5" autocomplete="off">
+                <label class="btn btn-outline-secondary"  for="btnradio5">EFECE 4</label>
+                <input type="radio" class="btn-check"  value="TRANSFER" onclick="change(6)" name="btnradio" id="btnradio6" autocomplete="off">
                 <label class="btn btn-outline-secondary" for="btnradio6">TRANSFER</label>
 
             </div>
@@ -1160,7 +1162,7 @@
 
             if (row.FK_ACIKLAMA == 'FIYAT GRUBU TANIMLANMAYANLAR') {
 
-                st = st + "<tr><td>" + d[i].STOK_ADI + "</td>" + "<td>" + d[i].LISTE_FIYATI + "</td>" + "<td>" + (d[i].TOPTAN_ISK == "null" ? d[i].TOPTAN_ISK : "-") + "</td>" + "<td>" + (d[i].PERAKENDE_ISK == "null" ? d[i].PERAKENDE_ISK : "-") + "</td>" + "<td>" + (d[i].TOPTAN_FIYAT == "null" ? parseFloat(d[i].TOPTAN_FIYAT).toLocaleString() : "-") + "</td><td>" + (d[i].PERAKENDE_FIYAT == "null" ? parseFloat(d[i].PERAKENDE_FIYAT).toLocaleString() : "-") + "</td>" + "<td>" + (d[i].FIYATDOVIZTIPI == "null" ? d[i].FIYATDOVIZTIPI : "-") + "</td>" + "<td>" + (d[i].OLCUBR == "null" ? d[i].OLCUBR : "-") + "</td><td>" + (d[i].BAKIYE ? parseFloat(d[i].BAKIYE).toLocaleString() : "-") + "</td>" + "<td>" + (d[i].TOPTAN_DEGER == "null" ? d[i].TOPTAN_DEGER.toLocaleString() : "-") + "</td><td>" + (d[i].PERAKENDE_DEGER == "null" ? parseInt(d[i].PERAKENDE_DEGER).toLocaleString() : "-") + "</td><td>" + (d[i].TOPTAN_DEGER ? parseFloat(d[i].TOPTAN_DEGER_TL).toLocaleString() : "-") + "</td><td>" + (d[i].PERAKENDE_DEGER_TL ? parseFloat(d[i].PERAKENDE_DEGER_TL).toLocaleString() : "-") + "</td></tr>";
+                st = st + "<tr><td>" + d[i].SERI_NO + "</td>" + "<td>" + (d[i].LISTE_FIYATI == 0 ? '-' : d[i].LISTE_FIYATI) + "</td>" + "<td>" + (d[i].TOPTAN_ISK == null ? '-' : d[i].TOPTAN_ISK) + "</td>" + "<td>" + (d[i].PERAKENDE_ISK == null ? '-' : d[i].PERAKENDE_ISK) + "</td>" + "<td>" + (d[i].TOPTAN_FIYAT == null ? '-' : parseFloat(d[i].TOPTAN_FIYAT).toLocaleString('tr-TR', { minimumFractionDigits: 2, maximumFractionDigits: 2 })) + "</td><td>" + (d[i].PERAKENDE_FIYAT ? parseFloat(d[i].PERAKENDE_FIYAT).toLocaleString('tr-TR', { minimumFractionDigits: 2, maximumFractionDigits: 2 }) : "-") + "</td>" + "<td>" + (d[i].FIYATDOVIZTIPI ? d[i].FIYATDOVIZTIPI : "-")  + "</td>" + "<td>" + (d[i].OLCUBR ? d[i].OLCUBR : "-") + "</td><td>" + (d[i].BAKIYE ? parseFloat(d[i].BAKIYE).toLocaleString() : "-") + "</td>" + "<td>" + (d[i].TOPTAN_DEGER ? parseFloat(d[i].TOPTAN_DEGER).toLocaleString('tr-TR', { minimumFractionDigits: 2, maximumFractionDigits: 2 }) : "-") + "</td><td>" + (d[i].PERAKENDE_DEGER ? parseFloat(d[i].PERAKENDE_DEGER).toLocaleString('tr-TR', { minimumFractionDigits: 2, maximumFractionDigits: 2 }) : "-") + "</td><td>" + (d[i].TOPTAN_DEGER_TL ? parseFloat(d[i].TOPTAN_DEGER_TL).toLocaleString('tr-TR', { minimumFractionDigits: 2, maximumFractionDigits: 2 }) : "-") + "</td><td>" + (d[i].PERAKENDE_DEGER_TL ? parseFloat(d[i].PERAKENDE_DEGER_TL).toLocaleString('tr-TR', { minimumFractionDigits: 2, maximumFractionDigits: 2 }) : "-") + "</td></tr>";
             } else {
                 var top = (parseFloat(d[i].TOPTAN_FIYAT || 0).toLocaleString());
                 if (top.includes(',')) {
@@ -1192,14 +1194,16 @@
                 }
                
 
-                st = st + "<tr><td>" + d[i].STOK_ADI + "</td>" + "<td>" + d[i].LISTE_FIYATI + "</td>" + "<td>" + (d[i].TOPTAN_ISK == "null" ? d[i].TOPTAN_ISK : "-") + "</td>" + "<td>" + (d[i].PERAKENDE_ISK == "null" ? d[i].PERAKENDE_ISK : "-") + "</td>" + "<td>" + top + "</td><td>" + par + "</td>" + "<td>" + (d[i].FIYATDOVIZTIPI  ??  "-") + "</td>" + "<td>" + (d[i].OLCUBR ?? "-") + "</td><td>" + bak + "</td>" + "<td>" + topdeg + "</td><td>" + pardeg + "</td><td>" + topdegtl + "</td><td>" + pardegtl + "</td></tr>";
+                st = st + "<tr><td>" + d[i].STOK_ADI + "</td>" + "<td>" + d[i].LISTE_FIYATI + "</td>" + "<td>" + (d[i].TOPTAN_ISK == null ? '-' : d[i].TOPTAN_ISK) + "</td>" + "<td>" + (d[i].PERAKENDE_ISK  == null ? '-' : d[i].PERAKENDE_ISK) + "</td>" + "<td>" + top + "</td><td>" + par + "</td>" + "<td>" + (d[i].FIYATDOVIZTIPI  ??  "-") + "</td>" + "<td>" + (d[i].OLCUBR ?? "-") + "</td><td>" + bak + "</td>" + "<td>" + topdeg + "</td><td>" + pardeg + "</td><td>" + topdegtl + "</td><td>" + pardegtl + "</td></tr>";
             }
 
 
         }
 
-
-        return "<table class='table table-borderless no'><thead><tr class'text-nowrap'><th class='text-nowrap'>STOK ADI</th><th class='text-nowrap' style='padding-left: 10px'>LİSTE FİYATI</th><th class='text-nowrap' style='padding-left: 10px'>TOPTAN İSK.</th><th class='text-nowrap' style='padding-left: 10px'>PERAKENDE İSK.</th><th class='text-nowrap' style='padding-left: 10px'>TOPTAN FİYAT</th><th class='text-nowrap' style='padding-left: 10px'>PERAKENDE FİYAT</th><th class='text-nowrap' style='padding-left: 10px'>TİP</th><th class='text-nowrap' style='padding-left: 10px'>OLCU BIRIMI</th><th class='text-nowrap' style='padding-left: 10px'>TOPLAM BAKIYE</th><th class='text-nowrap' style='padding-left: 10px'>TOPTAN DEGER</th><th class='text-nowrap' style='padding-left: 10px'>PERAKENDE DEGER</th><th class='text-nowrap' style='padding-left: 10px'>TOPTAN DEGER(TL)</th><th class='text-nowrap' style='padding-left: 10px'>PERAKENDE DEGER(TL)</th></tr></thead><tbody>" + st + "</tbody></table>";
+        if ($("input:checked").val()!='EFECE4')
+            return "<table class='table table-borderless no'><thead><tr class'text-nowrap'><th class='text-nowrap'>STOK ADI</th><th class='text-nowrap' style='padding-left: 10px'>LİSTE FİYATI</th><th class='text-nowrap' style='padding-left: 10px'>TOPTAN İSK.</th><th class='text-nowrap' style='padding-left: 10px'>PERAKENDE İSK.</th><th class='text-nowrap' style='padding-left: 10px'>TOPTAN FİYAT</th><th class='text-nowrap' style='padding-left: 10px'>PERAKENDE FİYAT</th><th class='text-nowrap' style='padding-left: 10px'>TİP</th><th class='text-nowrap' style='padding-left: 10px'>OLCU BIRIMI</th><th class='text-nowrap' style='padding-left: 10px'>TOPLAM BAKIYE</th><th class='text-nowrap' style='padding-left: 10px'>TOPTAN DEGER</th><th class='text-nowrap' style='padding-left: 10px'>PERAKENDE DEGER</th><th class='text-nowrap' style='padding-left: 10px'>TOPTAN DEGER(TL)</th><th class='text-nowrap' style='padding-left: 10px'>PERAKENDE DEGER(TL)</th></tr></thead><tbody>" + st + "</tbody></table>";
+        else
+            return "<table class='table table-borderless no'><thead><tr class'text-nowrap'><th class='text-nowrap'>SERI NO</th><th class='text-nowrap' style='padding-left: 10px'>LİSTE FİYATI</th><th class='text-nowrap' style='padding-left: 10px'>TOPTAN İSK.</th><th class='text-nowrap' style='padding-left: 10px'>PERAKENDE İSK.</th><th class='text-nowrap' style='padding-left: 10px'>TOPTAN FİYAT</th><th class='text-nowrap' style='padding-left: 10px'>PERAKENDE FİYAT</th><th class='text-nowrap' style='padding-left: 10px'>TİP</th><th class='text-nowrap' style='padding-left: 10px'>OLCU BIRIMI</th><th class='text-nowrap' style='padding-left: 10px'>TOPLAM BAKIYE</th><th class='text-nowrap' style='padding-left: 10px'>TOPTAN DEGER</th><th class='text-nowrap' style='padding-left: 10px'>PERAKENDE DEGER</th><th class='text-nowrap' style='padding-left: 10px'>TOPTAN DEGER(TL)</th><th class='text-nowrap' style='padding-left: 10px'>PERAKENDE DEGER(TL)</th></tr></thead><tbody>" + st + "</tbody></table>";
 
 
 
@@ -1234,8 +1238,11 @@
                     }
                 }
             }
-
-            return "<table class='table table-bordered no'><thead class='sticky-top'><tr class'text-nowrap'><th class='text-nowrap text-center'>STOK ADI</th><th class='text-nowrap text-center'>SERİ NO</th><th class='text-nowrap text-center'>RENK KODU</th><th class='text-nowrap text-center'>KALINLIK</th><th class='text-nowrap text-center'>GENİŞLİK</th><th class='text-nowrap text-center'>KALİTE</th><th class='text-nowrap text-center'>KAPLAMA</th><th class='text-nowrap text-center'>BAKİYE</th><th class='text-nowrap text-center'>FİYAT</th></thead><tbody>" + st + "</tbody></table>";
+            if ($("input:checked").val() != 'EFECE4')
+                return "<table class='table table-bordered no'><thead class='sticky-top'><tr class'text-nowrap'><th class='text-nowrap text-center'>STOK ADI</th><th class='text-nowrap text-center'>SERİ NO</th><th class='text-nowrap text-center'>RENK KODU</th><th class='text-nowrap text-center'>KALINLIK</th><th class='text-nowrap text-center'>GENİŞLİK</th><th class='text-nowrap text-center'>KALİTE</th><th class='text-nowrap text-center'>KAPLAMA</th><th class='text-nowrap text-center'>BAKİYE</th><th class='text-nowrap text-center'>FİYAT</th></thead><tbody>" + st + "</tbody></table>";
+            else {
+                return "<table class='table table-bordered no'><thead class='sticky-top'><tr class'text-nowrap'><th class='text-nowrap text-center'>SERI NO</th><th class='text-nowrap text-center'>SERİ NO</th><th class='text-nowrap text-center'>RENK KODU</th><th class='text-nowrap text-center'>KALINLIK</th><th class='text-nowrap text-center'>GENİŞLİK</th><th class='text-nowrap text-center'>KALİTE</th><th class='text-nowrap text-center'>KAPLAMA</th><th class='text-nowrap text-center'>BAKİYE</th><th class='text-nowrap text-center'>FİYAT</th></thead><tbody>" + st + "</tbody></table>";
+            }
         } else {
             var st = "";
           
