--- a/NOVA/Views/YonetimPaneli/MailForm.cshtml
+++ b/NOVA/Views/YonetimPaneli/MailForm.cshtml
@@ -100,7 +100,7 @@
                 <div class="card-footer">
                     <div class="row">
 
-                        <div class="col"><button type="button" class="btn btn-danger float-end " onclick="location.href='@Url.Action("KullaniciAyar","YonetimPaneli")'">Geri</button><button type="submit" class="btn btn-info float-end me-3">Gönder</button></div>
+                        <div class="col"><button type="button" class="btn btn-danger float-end " onclick="location.href='@Url.Action("UygulamaAyarlari","YonetimPaneli")'">Geri</button><button type="submit" class="btn btn-info float-end me-3">Gönder</button></div>
                     </div>
                 </div>
             }
