--- a/NOVA/Views/YonetimPaneli/UygulamaAyarlari.cshtml
+++ b/NOVA/Views/YonetimPaneli/UygulamaAyarlari.cshtml
@@ -71,6 +71,7 @@
     }
 </style>
 <script>
+    $('#title').html('Nova | Uygulama Ayarları')
          async function getUserAsync() {
 let response = await fetch(`@Url.Action("GetUser", "Satis")`);
 let data = await response.json()
@@ -633,9 +634,9 @@ return data;
             }
             else if (value == 2) {
 
-                $('#filter').select2({ placeholder: 'Kullanıcı Filtreleme', width: '50%', float: 'end' });
+                $('#filter').select2({ placeholder: 'Kullanıcı Filtreleme', width: '35%', float: 'end' });
                 $('#filter').show();
-                $('#filter2').select2({ placeholder: 'Modül Filtreleme', width: '50%', float: 'end' });
+                $('#filter2').select2({ placeholder: 'Modül Filtreleme', width: '35%', float: 'end' });
                 $('#filter2').show();
                 $('#table').bootstrapTable('destroy');
                 $('#table').bootstrapTable({
