--- a/NOVA/Views/DisTicaret/IthalatSiparisleri.cshtml
+++ b/NOVA/Views/DisTicaret/IthalatSiparisleri.cshtml
@@ -137,7 +137,9 @@
             opacity: 0.8 !important;
         }
 </style>
-
+<script>
+    $('#title').html('Nova | İthalat Siparişleri')
+</script>
 <div class="jumbotron vertical-center" onclick="hideAllPop()">
     <div id="nova-overlay" style="position: absolute; background: #00000080; left: 0; right: 0; bottom: 0; top: 0; z-index: 9999999;display:none;justify-content:center;align-items:center;">
         <div class="heart"><img id="progress" src="~/images/novasaydam.png" width="400" /></div>
