--- a/NOVA/Views/IK/PersonelBilgiYonetim.cshtml
+++ b/NOVA/Views/IK/PersonelBilgiYonetim.cshtml
@@ -11,7 +11,7 @@
     <link href="~/Scripts/select2.css" rel="stylesheet" />
     <script src="~/Scripts/select2.min.js"></script>
     <link href="~/bootstrap-icons-1.11.2/font/bootstrap-icons.min.css" rel="stylesheet" />
-
+    <title>NOVA | Personel Bilgi Yönetimi</title>
     <style>
         .no-records-found {
             display: none;
