--- a/NOVA/Views/IK/PersonelSubeYonetim.cshtml
+++ b/NOVA/Views/IK/PersonelSubeYonetim.cshtml
@@ -14,6 +14,7 @@
             padding: 0 0 0 3rem !important;
         }
     </style>
+    <title>Nova | Şube Bazında Personel Bilgi Yönetimi</title>
 </head>
 <body onclose="close()">
     <div class="container-xxl flex-grow-1 container-p-y">
