--- a/NOVA/Views/SatinAlma/SatinAlmaRaporu.cshtml
+++ b/NOVA/Views/SatinAlma/SatinAlmaRaporu.cshtml
@@ -238,7 +238,7 @@
                        data-show-fullscreen="true"
                        data-buttons-order="['filterTable','columns']"
                        data-toggle="table"
-                       data-show-export="false"
+                       data-show-export="true"
                        data-export-data-type="all"
                        data-export-types="['excel']"
                        data-pagination="true"
