--- a/NOVA/Views/Satis/FabrikaStok.cshtml
+++ b/NOVA/Views/Satis/FabrikaStok.cshtml
@@ -160,6 +160,9 @@
         padding: 3px;
     }
 </style>
+<script>
+    $('#title').html('Nova | Fabrika Stok Bilgisi')
+</script>
 <link href="~/assets/vendor/css/Chart.css" rel="stylesheet" />
 <div id="nova-overlay" style="position: absolute; background: #00000080; left: 0; right: 0; bottom: 0; top: 0; z-index: 9999999;display:none;justify-content:center;align-items:center;">
     <div class="heart"><img id="progress" src="~/images/novasaydam.png" width="400" /></div>
