--- a/NOVA/Views/Satis/FiyatYonetimi.cshtml
+++ b/NOVA/Views/Satis/FiyatYonetimi.cshtml
@@ -102,7 +102,9 @@
         }
     }
 </style>
-
+<script>
+    $('#title').html('Nova | Fiyat Yönetimi')
+</script>
 <div class="jumbotron vertical-center" onclick="hideAllPop()">
     <div id="nova-overlay" style="position: absolute; background: #00000080; left: 0; right: 0; bottom: 0; top: 0; z-index: 9999999;display:none;justify-content:center;align-items:center;">
         <div class="heart"><img id="progress" src="~/images/novasaydam.png" width="400" /></div>
