--- a/NOVA/Views/Shared/Layout_Empty.cshtml
+++ b/NOVA/Views/Shared/Layout_Empty.cshtml
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE9">
-    <title>Nova | Efece Galvaniz</title>
+    <title id="title">Nova | Efece Galvaniz</title>
 
     <link rel="icon" type="image/x-icon" href="/assets/img/icons/brands/Nova_White.png" />
 
@@ -14,6 +14,7 @@
     <link href="~/wwwroot/libs/boxicons/css/boxicons.css" rel="stylesheet" />
     <link href="~/wwwroot/libs/sweetalert2/sweetalert2.css" rel="stylesheet" />
     <link href="~/wwwroot/libs/animate.css/animate.css" rel="stylesheet" />
+    <link href="~/wwwroot/libs/bootstrap-select/css/bootstrap-select.min.css" rel="stylesheet" />
 
     <link href="~/wwwroot/css/Utils.css" rel="stylesheet" />
     <link href="~/wwwroot/css/Themes.css" rel="stylesheet" />
@@ -42,5 +43,8 @@
     <script src="~/wwwroot/libs/bootstrap/js/bootstrap.bundle.js"></script>
     <script src="~/wwwroot/libs/sweetalert2/sweetalert2.js"></script>
     <script src="~/wwwroot/libs/axios/axios.js"></script>
+    <script src="~/wwwroot/libs/bootstrap-select/js/bootstrap-select.js"></script>
+    <script src="~/wwwroot/libs/bootstrap-select/js/i18n/defaults-tr_TR.js"></script>
+    <script src="~/wwwroot/libs/moment.js/moment.min.js"></script>
 </body>
 </html>
