--- a/NOVA/Views/Shared/_Layout_Kur.cshtml
+++ b/NOVA/Views/Shared/_Layout_Kur.cshtml
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE9">
-    <title>Nova | Efece Galvaniz</title>
+    <title>Nova | Kur Yönetimi</title>
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/assets/img/icons/brands/Nova_White.png" />
     <script src="~/Scripts/jquery-3.6.1.min.js"></script>
