--- a/NOVA/Views/Shared/_Layout_MES.cshtml
+++ b/NOVA/Views/Shared/_Layout_MES.cshtml
@@ -14,15 +14,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Nova | Efece Galvaniz</title>
+    <title>Nova | MES</title>
 
     <link rel="icon" type="image/x-icon" href="/assets/img/icons/brands/Nova_White.png" />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link href="~/wwwroot/libs/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/wwwroot/libs/bootstrap-icons/font/bootstrap-icons.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
-    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="~/wwwroot/libs/jquery/jquery.min.js"></script>
 
     <style>
         :root {
@@ -207,12 +207,12 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="~/wwwroot/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="~/wwwroot/libs/axios/axios.min.js"></script>
     <script src="https://unpkg.com/&#64popperjs/core@2"></script>
     <script src="https://unpkg.com/tippy.js@6"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment-with-locales.min.js" integrity="sha512-42PE0rd+wZ2hNXftlM78BSehIGzezNeQuzihiBCvUEB3CVxHvsShF86wBWwQORNxNINlBPuq7rG4WWhNiTVHFg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="~/Scripts/sweetAlert.js"></script>
+    <script src="~/wwwroot/libs/moment.js/moment-with-locales.min.js"></script>
+    <script src="~/wwwroot/libs/sweetalert2/sweetalert2.all.min.js"></script>
     <script type="module">
         import marquee from '/wwwroot/libs/vanilla-marquee/dist/vanilla-marquee.js';
 
@@ -222,21 +222,20 @@
                     var Template = `<div class="subtitle-content">`;
 
                     for (const Machine of response.data) {
-                        if (!Machine.HATKODU.toUpperCase().includes("SM"))
-                        {
+                        if (!Machine.HATKODU.toUpperCase().includes("SM")) {
                             Template += `<div class="machine-subtitle-data">
-                                            <img src="/assets/img/icons/brands/NOVA_LOGO_CIRCLE.png" height="16" width="16">
-                                            <span><b>${Machine.HATKODU}</b> ❯</span>
-                                            <span style="color:#c7c7c7;">★ AYLIK→</span>
-                                            <span style="color:#7aa5db;">• ÜRETİM: <span id="${Machine.HATKODU}-aylik-uretim">${MiktarFormat(Machine.AYLIK_TOPLAM_MIKTAR, 'KG')}</span></span>
-                                            <span style="color:#ff2300;">• HURDA: <span id="${Machine.HATKODU}-aylik-hurda">${MiktarFormat(Machine.AY_TOPLAM_HURDA, 'KG')} (${OranFormat(Machine.AY_TOPLAM_HURDA, Machine.AYLIK_TOPLAM_MIKTAR)})</span></span>
-                                            <span style="color:#ff8e2e;">• 2. KALİTE: <span id="${Machine.HATKODU}-aylik-ikinci-kalite">${MiktarFormat(Machine.AY_TOPLAM_KALITE2, 'KG')} (${OranFormat(Machine.AY_TOPLAM_KALITE2, Machine.AYLIK_TOPLAM_MIKTAR)})</span></span>
+                                                            <img src="/assets/img/icons/brands/NOVA_LOGO_CIRCLE.png" height="16" width="16">
+                                                            <span><b>${Machine.HATKODU}</b> ❯</span>
+                                                            <span style="color:#c7c7c7;">★ AYLIK→</span>
+                                                            <span style="color:#7aa5db;">• ÜRETİM: <span id="${Machine.HATKODU}-aylik-uretim">${MiktarFormat(Machine.AYLIK_TOPLAM_MIKTAR, 'KG')}</span></span>
+                                                            <span style="color:#ff2300;">• HURDA: <span id="${Machine.HATKODU}-aylik-hurda">${MiktarFormat(Machine.AY_TOPLAM_HURDA, 'KG')} (${OranFormat(Machine.AY_TOPLAM_HURDA, Machine.AYLIK_TOPLAM_MIKTAR)})</span></span>
+                                                            <span style="color:#ff8e2e;">• 2. KALİTE: <span id="${Machine.HATKODU}-aylik-ikinci-kalite">${MiktarFormat(Machine.AY_TOPLAM_KALITE2, 'KG')} (${OranFormat(Machine.AY_TOPLAM_KALITE2, Machine.AYLIK_TOPLAM_MIKTAR)})</span></span>
 
-                                            <span style="color:#c7c7c7;">★ YILLIK→</span>
-                                            <span style="color:#7aa5db;">• ÜRETİM: <span id="${Machine.HATKODU}-yillik-uretim">${MiktarFormat(Machine.YILLIK_TOPLAM_MIKTAR, 'KG')}</span></span>
-                                            <span style="color:#ff2300;">• HURDA: <span id="${Machine.HATKODU}-yillik-hurda">${MiktarFormat(Machine.YIL_TOPLAM_HURDA, 'KG')} (${OranFormat(Machine.YIL_TOPLAM_HURDA, Machine.YILLIK_TOPLAM_MIKTAR)})</span></span>
-                                            <span style="color:#ff8e2e;">• 2. KALİTE: <span id="${Machine.HATKODU}-yillik-ikinci-kalite">${MiktarFormat(Machine.YIL_TOPLAM_KALITE2, 'KG')} (${OranFormat(Machine.YIL_TOPLAM_KALITE2, Machine.YILLIK_TOPLAM_MIKTAR)})</span></span>
-                                          </div>`;
+                                                            <span style="color:#c7c7c7;">★ YILLIK→</span>
+                                                            <span style="color:#7aa5db;">• ÜRETİM: <span id="${Machine.HATKODU}-yillik-uretim">${MiktarFormat(Machine.YILLIK_TOPLAM_MIKTAR, 'KG')}</span></span>
+                                                            <span style="color:#ff2300;">• HURDA: <span id="${Machine.HATKODU}-yillik-hurda">${MiktarFormat(Machine.YIL_TOPLAM_HURDA, 'KG')} (${OranFormat(Machine.YIL_TOPLAM_HURDA, Machine.YILLIK_TOPLAM_MIKTAR)})</span></span>
+                                                            <span style="color:#ff8e2e;">• 2. KALİTE: <span id="${Machine.HATKODU}-yillik-ikinci-kalite">${MiktarFormat(Machine.YIL_TOPLAM_KALITE2, 'KG')} (${OranFormat(Machine.YIL_TOPLAM_KALITE2, Machine.YILLIK_TOPLAM_MIKTAR)})</span></span>
+                                                          </div>`;
                         }
                     }
 
@@ -268,20 +267,18 @@
             return (Math.ceil(v * Math.pow(10, n)) / Math.pow(10, n)).toFixed(2);
         }
 
-        function BilgiGuncelle()
-        {
+        function BilgiGuncelle() {
             axios.get('http://192.168.2.13:83/api/makine/mes/sub')
                 .then((response) => {
 
-                    for (const Machine of response.data)
-                    {
+                    for (const Machine of response.data) {
                         $(`#${Machine.HATKODU}-aylik-uretim`).html(MiktarFormat(Machine.AYLIK_TOPLAM_MIKTAR, 'KG'));
                         $(`#${Machine.HATKODU}-aylik-hurda`).html(`${MiktarFormat(Machine.AY_TOPLAM_HURDA, 'KG')} (${OranFormat(Machine.AY_TOPLAM_HURDA, Machine.AYLIK_TOPLAM_MIKTAR)})`);
                         $(`#${Machine.HATKODU}-aylik-ikinci-kalite`).html(`${MiktarFormat(Machine.AY_TOPLAM_KALITE2, 'KG')} (${OranFormat(Machine.AY_TOPLAM_KALITE2, Machine.AYLIK_TOPLAM_MIKTAR)})`);
 
                         $(`#${Machine.HATKODU}-yillik-uretim`).html(MiktarFormat(Machine.YILLIK_TOPLAM_MIKTAR, 'KG'));
                         $(`#${Machine.HATKODU}-yillik-hurda`).html(`${MiktarFormat(Machine.YIL_TOPLAM_HURDA, 'KG')} (${OranFormat(Machine.YIL_TOPLAM_HURDA, Machine.YILLIK_TOPLAM_MIKTAR)})`);
-                        $(`#${Machine.HATKODU}-yillik-ikinci-kalite`).html(`${MiktarFormat(Machine.YIL_TOPLAM_KALITE2, 'KG')} (${OranFormat(Machine.YIL_TOPLAM_KALITE2,Machine.YILLIK_TOPLAM_MIKTAR)})`);
+                        $(`#${Machine.HATKODU}-yillik-ikinci-kalite`).html(`${MiktarFormat(Machine.YIL_TOPLAM_KALITE2, 'KG')} (${OranFormat(Machine.YIL_TOPLAM_KALITE2, Machine.YILLIK_TOPLAM_MIKTAR)})`);
                     }
                 })
                 .catch((ex) => {
