--- a/NOVA/Views/Shared/_Layout_ZiyaretPlanlari.cshtml
+++ b/NOVA/Views/Shared/_Layout_ZiyaretPlanlari.cshtml
@@ -6,7 +6,7 @@
       data-assets-path="\assets\"
       data-template="vertical-menu-template-free">
 <head>
-    <title>Nova | Ziyaret Planlama</title>
+    <title>Nova | Müşteri İlişkileri Yönetimi</title>
     <!-- Favicon -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/assets/img/icons/brands/Nova_White.png" />
