--- a/NOVA/Views/Shared/_Layout_anasayfa.cshtml
+++ b/NOVA/Views/Shared/_Layout_anasayfa.cshtml
@@ -16,7 +16,7 @@
 
     <meta name="description" content="" />
 
-    <title>Nova | Efece Galvaniz</title>
+    <title>Nova | Anasayfa</title>
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/assets/img/icons/brands/Nova_White.png" />
 
