--- a/NOVA/Views/YonetimPaneli/MailFormToplu.cshtml
+++ b/NOVA/Views/YonetimPaneli/MailFormToplu.cshtml
@@ -94,7 +94,7 @@
                 <div class="card-footer">
                     <div class="row">
 
-                        <div class="col"><button type="button" class="btn btn-danger float-end " onclick="location.href='@Url.Action("KullaniciAyar","YonetimPaneli")'">Geri</button> <button type="button" class="btn btn-info float-end me-3" onclick="mailGonder()">Gönder</button> </div>
+                        <div class="col"><button type="button" class="btn btn-danger float-end " onclick="location.href='@Url.Action("UygulamaAyarlari","YonetimPaneli")'">Geri</button> <button type="button" class="btn btn-info float-end me-3" onclick="mailGonder()">Gönder</button> </div>
                     </div>
                 </div>}
 
